# agentdiff

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml  test.yml
src/agentdiff/: __init__.py  __main__.py
src/agentdiff/blame/: engine.py
src/agentdiff/capture/: reasoning.py  scope.py  spec_linker.py
src/agentdiff/cli/: app.py  blame_cmd.py  doctor_cmd.py  init_cmd.py  log_cmd.py  relink_cmd.py  teardown_cmd.py  tour_cmd.py
src/agentdiff/daemon/: handlers.py  lifecycle.py  server.py
src/agentdiff/hooks/: git_hooks.py  scripts.py
src/agentdiff/models/: changes.py  config.py  events.py  session.py  tasks.py
src/agentdiff/shared/: claude_cli.py  errors.py  formatting.py  paths.py
src/agentdiff/store/: change_log.py  session_store.py
tests/: conftest.py
tests/test_blame/: test_engine.py
tests/test_capture/: test_reasoning.py  test_scope.py  test_spec_linker.py
tests/test_cli/: test_init.py  test_tour.py
tests/test_daemon/: test_handlers.py
tests/test_integration/: test_end_to_end.py
tests/test_models/: test_changes.py
tests/test_shared/: test_claude_cli.py
tests/test_store/: test_change_log.py  test_session_store.py
tour-example/: package.json
tour-example/.tours/: agentdiff-demo.tour
tour-example/src/: examples.json  index.js  pipeline.js  templates.js  validator.js
