[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentdiff"
version = "0.1.0"
description = "git blame for AI-generated code. See the prompt, reasoning, and spec link for every line."
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"
authors = [{ name = "Sunil Mallya", email = "mallya.16@gmail.com" }]
keywords = ["ai", "coding-agent", "blame", "traceability", "claude-code", "vibe-coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
]

[project.urls]
Homepage = "https://github.com/sunilmallya/agentdiff"
Repository = "https://github.com/sunilmallya/agentdiff"
Issues = "https://github.com/sunilmallya/agentdiff/issues"

[project.scripts]
agentdiff = "agentdiff.cli.app:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentdiff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
